# rshare

./: .gitignore  Makefile  README.md
rshare/: Cargo.toml
rshare/src/: main.rs
rshare/src/other/: mod.rs  qr.rs  srv.rs  state.rs
rshare/templates/: 404.html  gallery.html  qr.html
