[package]
name = "rshare"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.8", features = ["multipart"]}
clap = {version = "4.5.60", features = ["derive"] }
image = "0.25.9"
local-ip-address = "0.6.10"
portpicker = "0.1.1"
qrcode = "0.14.1"
tokio = {version = "1.49.0" , features = ["macros", "rt-multi-thread", "net", "signal"]}
tower-http = { version = "0.6.8", features = ["fs"] }
